(executable
 (name day1)
 (modules day1)
 (libraries str))

(executable
 (name day2)
 (modules day2)
 (libraries str))

(executable
 (name day3)
 (modules day3)
 (libraries str))

(executable
 (name day4)
 (modules day4)
 (libraries str))

(executable
 (name day4_2)
 (modules day4_2)
 (libraries str))

(executable
 (name day5)
 (modules day5)
 (libraries str))

(executable
 (name day9)
 (modules day9))

(executable
 (name day10)
 (modules day10)
 (libraries str))

(executable
 (name day11)
 (modules day11)
 (libraries str))

(executable
 (name day11_2)
 (modules day11_2)
 (libraries str))
